2005-06-07  Paul Stevens <paul@nfg.nl>

	* many files: added ip-based virtual hosting and user-mapping.

2005-05-31  Paul Stevens <paul@nfg.nl>
	
	* imaputils.c (date_sql2imap): revert to gnuish behavior which should
	work just fine on linux and bsd (closes #79).

2005-05-30  Paul Stevens <paul@nfg.nl>

	* imapcommands.c (_ic_expunge): return non-fatal error in case of NO
	response.
	
2005-05-25  Paul Stevens <paul@nfg.nl>

	* db.h, db.c, auth/authsql.c, auth/authldap.c,
	sql/mysql/add_usermap.mysql, sql/mysql/create_tables_innoDB.mysql, 
	sql/postgresql/add_usermap.pgsql, sql/postgresql/create_tables.pgsql:
	reimplemented Jesse Norell's usermap patch in 2.1.
	* misc.h, config.c, dbmail.h, check_dbmail_imapd.c, misc.c: added the
	serverid parameter and the dm_getguid call. Together they will be used
	for replacing auto_increment columns with a GUID value.
	
2005-05-24  Paul Stevens <paul@nfg.nl>

	* server.c(ParentSigHandler): finalize fix for #199.
	* imaputil.c, check_dbmail_imapd.c (dbmail_imap_astring_as_string): cleanup and fixes.
	* db.c, db.h: start using symbolic return codes.
	
2005-05-18  Paul Stevens <paul@nfg.nl>

	* check_dbmail_deliver.c, config.c, lmtpd.c, check_dbmail_server.c, 
	pop3d.c, mime.c, imapd.c, dbmail-message.c, check_dbmail_imapd.c,
	main.c, check_dbmail_message.c: move the g_mime_init/shutdown hooks to
	the main loop of each program. This fixes some possible double frees.
	* debian/po/cz.po: added czech translations for debconf.
	
2005-05-17  Paul Stevens <paul@nfg.nl>

	* misc.h, db.c, db.h, imapcommands.c, imaputil.c, imaputil.h,
	dbmail.h, test-scripts/testimap.py, misc.c: replaced regex code in
	_ic_list with new listex_match.
	
2005-05-13  Paul Stevens <paul@nfg.nl>

	* imaputil.c, imaputil.h, check_dbmail_imapd.c: integrated Geo's
	listex_match code in the test-frame.

2005-05-11  Paul Stevens <paul@nfg.nl>

	* server.h, server.c, serverchild.c, lmtpd.c, dbmail.conf: added 
	unix socket support for lmtp.
